WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
119825
compositing/geometry/bounds-ignores-hidden-dynamic.html has incorrect initial rendering
https://bugs.webkit.org/show_bug.cgi?id=119825
Summary
compositing/geometry/bounds-ignores-hidden-dynamic.html has incorrect initial...
Simon Fraser (smfr)
Reported
2013-08-14 16:22:39 PDT
When LayoutTests/compositing/geometry/bounds-ignores-hidden-dynamic.html is first loaded, the content is weirdly stretched. Resizing the window fixes it.
Attachments
Patch
(16.14 KB, patch)
2013-08-22 16:55 PDT
,
Simon Fraser (smfr)
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2013-08-14 16:23:21 PDT
<
rdar://problem/14741490
>
Simon Fraser (smfr)
Comment 2
2013-08-22 16:55:03 PDT
Created
attachment 209406
[details]
Patch
Tim Horton
Comment 3
2013-08-22 16:59:21 PDT
Comment on
attachment 209406
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=209406&action=review
> Source/WebCore/platform/graphics/GraphicsLayer.h:504 > + // Whether this layer should have setNeedsDisplay called when resized.
The function name is pretty descriptive...
Simon Fraser (smfr)
Comment 4
2013-08-22 17:28:28 PDT
https://trac.webkit.org/r154470
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug